--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
            <li><a href="./index.html">Home</a></li>
             <li><a href= "./about.html">About</a></li>
             </ul>
-        
+            <h1> Ihab Abbas</h1>
          <img src="./logo.png" alt="HTML5 Icon" width="128" height="128">
         </nav>
     </header>
